rip forgot this

--- a/interface/mailbot/app/src/main/res/layout/collection1_activity_details.xml
+++ b/interface/mailbot/app/src/main/res/layout/collection1_activity_details.xml
@@ -23,7 +23,8 @@
             android:layout_below="@id/speechBubble"
             android:layout_alignLeft="@id/speechBubble"
             android:layout_marginLeft="30dp"
-            android:visibility=""/>
+            android:layout_marginTop="20dp"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/botFace"
@@ -69,7 +70,7 @@
             android:layout_below="@id/speechBubble"
             android:layout_toRightOf="@+id/botFace"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="60dp">
 
             <LinearLayout
                 android:id="@+id/topFieldPanel"
@@ -86,7 +87,7 @@
 
                 <EditText
                     android:id="@+id/topEntry"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:textColor="#ffffff"
                     android:layout_marginStart="100dp"/>
@@ -116,7 +117,7 @@
 
                 <EditText
                     android:id="@+id/midEntry"
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:textColor="#ffffff"/>
@@ -151,7 +152,7 @@
                     android:layout_width="wrap_content"
                     android:textColor="#ffffff"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="116dp"/>
+                    android:layout_marginStart="140dp"/>
 
                 <EditText
                     android:id="@+id/deliveryLocation"
