--- a/interface/mailbot/app/src/main/res/layout/collection1_activity_end_dialog.xml
+++ b/interface/mailbot/app/src/main/res/layout/collection1_activity_end_dialog.xml
@@ -26,7 +26,8 @@
         android:orientation="horizontal"
         android:layout_marginTop="16dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp">
+        android:layout_marginEnd="10dp"
+        android:layout_centerHorizontal="true">
 
         <RelativeLayout
             android:id="@+id/smallLocker"
