--- a/interface/mailbot/app/src/main/res/layout/collection1_activity_main.xml
+++ b/interface/mailbot/app/src/main/res/layout/collection1_activity_main.xml
@@ -28,46 +28,46 @@
 
         <ImageView
             android:id="@+id/mailbotMain"
-            android:layout_width="350dp"
-            android:layout_height="320dp"
+            android:layout_width="@dimen/_180sdp"
+            android:layout_height="@dimen/_160sdp"
             android:layout_centerVertical="true"
-            android:layout_marginStart="70dp"
+            android:layout_marginStart="@dimen/_35sdp"
             android:src="@mipmap/mailbot_nocap"
             app:layout_constraintStart_toStartOf="parent" />
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
             android:layout_width="wrap_content"
-            android:layout_height="320dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="40dp"
+            android:layout_height="@dimen/_160sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_30sdp"
             android:layout_toEndOf="@id/mailbotMain">
 
             <ImageView
                 android:id="@+id/speechBubbleMain"
-                android:layout_width="450dp"
-                android:layout_height="293dp"
+                android:layout_width="@dimen/_225sdp"
+                android:layout_height="@dimen/_146sdp"
                 android:src="@mipmap/speechbubble" />
 
             <TextView
-                android:layout_width="380dp"
-                android:layout_height="180dp"
+                android:layout_width="@dimen/_190sdp"
+                android:layout_height="@dimen/_90sdp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="@dimen/_23sdp"
                 android:text="@string/mainActivitySpeech"
                 android:textAlignment="center"
                 android:textColor="@color/postRed"
-                android:textSize="20sp"
+                android:textSize="@dimen/_10sdp"
                 android:textStyle="bold" />
         </RelativeLayout>
 
         <ImageView
             android:id="@+id/letter"
-            android:layout_width="80dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="350dp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_175sdp"
             android:layout_toEndOf="@id/mailbotMain"
             android:src="@mipmap/email_smashicons" />
 
@@ -77,18 +77,19 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/relativeLayout"
             android:layout_below="@+id/letter"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:text="@string/letterStandardText"
+            android:textSize="@dimen/_7sdp"
             android:textAlignment="center"
             android:textColor="#ffffff"/>
 
         <ImageView
             android:id="@+id/largeLetter"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="340dp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginStart="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_170sdp"
             android:layout_toEndOf="@id/letter"
             android:src="@mipmap/email_smashicons" />
 
@@ -97,20 +98,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/letter"
-            android:layout_marginStart="55dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/_28sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_toEndOf="@+id/textLetter"
             android:text="@string/letterLargeText"
             android:textAlignment="center"
+            android:textSize="@dimen/_7sdp"
             android:textColor="#ffffff"/>
 
 
         <ImageView
             android:id="@+id/largeParcel"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="340dp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginStart="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_170sdp"
             android:layout_toEndOf="@id/largeLetter"
             android:src="@mipmap/box_freepik" />
 
@@ -119,9 +121,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/letter"
-            android:layout_marginStart="49dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_toEndOf="@+id/textLargeLetter"
+            android:textSize="@dimen/_7sdp"
             android:text="@string/parcelText"
             android:textAlignment="center"
             android:textColor="#ffffff"/>
