--- a/interface/mailbot/app/src/main/res/layout/delivery_activity_password.xml
+++ b/interface/mailbot/app/src/main/res/layout/delivery_activity_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/postRed"
-    tools:context="com.extcord.jg3215.mailbot.CollectionMode.MainActivity_Collection1">
+    tools:context="com.extcord.jg3215.mailbot.collection_mode.MainActivity_Collection">
 
     <!--Can we get rid of the Constraint Layout? Seems redundant-->
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,7 +39,7 @@
             android:id="@+id/relativeLayout"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_200sdp"
-            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginStart="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_40sdp"
             android:layout_toEndOf="@id/mailbotMain">
 
@@ -69,14 +69,14 @@
                 android:layout_below="@id/speechBubbleMain"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:text="PIN code:"
+                android:text="@string/pinCode"
                 android:textAlignment="center"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/_12sdp"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/pinInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewPIN"
@@ -87,12 +87,12 @@
                 android:maxLength="4"/>
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/buttonSubmit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:text="Submit" />
+                android:text="@string/btnSubmit" />
         </RelativeLayout>
 
     </RelativeLayout>
