--- a/interface/mailbot/app/src/main/res/layout/delivery_activity_openlocker.xml
+++ b/interface/mailbot/app/src/main/res/layout/delivery_activity_openlocker.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/postRed"
-    tools:context="com.extcord.jg3215.mailbot.CollectionMode.MainActivity_Collection1">
+    tools:context="com.extcord.jg3215.mailbot.collection_mode.MainActivity_Collection">
 
     <!--Can we get rid of the Constraint Layout? Seems redundant-->
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,7 +39,7 @@
             android:id="@+id/relativeLayout"
             android:layout_width="wrap_content"
             android:layout_height="320dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="120dp"
             android:layout_toEndOf="@id/mailbotMain">
 
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="250dp"
                 android:layout_centerHorizontal="true"
-                android:text="DONE" />
+                android:text="@string/btnDone"/>
         </RelativeLayout>
 
     </RelativeLayout>
