--- a/interface/mailbot/app/src/main/res/layout/collection1_activity_main.xml
+++ b/interface/mailbot/app/src/main/res/layout/collection1_activity_main.xml
@@ -50,6 +50,7 @@
                 android:src="@mipmap/speechbubble" />
 
             <TextView
+                android:id="@+id/mainActivtySpeech"
                 android:layout_width="@dimen/_190sdp"
                 android:layout_height="@dimen/_90sdp"
                 android:layout_alignParentTop="true"
@@ -137,7 +138,6 @@
             android:layout_alignStart="@+id/mailbotMain"
             android:layout_marginBottom="27dp"
             android:ems="15"
-            android:textColor="#ffffff"
-            android:text="Name" />
+            android:textColor="#ffffff"/>
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
