--- a/interface/mailbot/app/src/main/res/layout/collection_activity_end_dialog.xml
+++ b/interface/mailbot/app/src/main/res/layout/collection_activity_end_dialog.xml
@@ -24,9 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_marginEnd="@dimen/_5sdp"
         android:layout_centerHorizontal="true">
 
         <RelativeLayout
@@ -36,18 +36,18 @@
 
             <ImageView
                 android:id="@+id/smallLockerImageView"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:src="@mipmap/email_smashicons"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"/>
+                android:layout_marginTop="@dimen/_20sdp"/>
             <TextView
                 android:id="@+id/letterTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/smallLockerImageView"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:text="@string/letterStandardText"
                 android:textColor="@android:color/background_light"
                 android:gravity="center"/>
@@ -57,21 +57,21 @@
             android:id="@+id/mediumLocker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp">
+            android:layout_marginStart="@dimen/_15sdp">
 
             <ImageView
                 android:id="@+id/medLockerImageView"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
                 android:src="@mipmap/email_smashicons"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_centerHorizontal="true"/>
             <TextView
                 android:id="@+id/medLockerTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/medLockerImageView"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:text="@string/letterLargeText"
                 android:textColor="@android:color/background_light"
                 android:gravity="center"/>
@@ -81,12 +81,12 @@
             android:id="@+id/largeLocker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp">
+            android:layout_marginStart="@dimen/_15sdp">
 
             <ImageView
                 android:id="@+id/largeLockerImageView"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="@dimen/_45sdp"
+                android:layout_height="@dimen/_45sdp"
                 android:src="@mipmap/box_freepik"
                 android:layout_centerHorizontal="true"/>
             <TextView
