--- a/interface/mailbot/app/src/main/res/layout/delivery_activity_openlocker.xml
+++ b/interface/mailbot/app/src/main/res/layout/delivery_activity_openlocker.xml
@@ -60,13 +60,24 @@
                 android:textColor="@color/postRed"
                 android:textSize="@dimen/_10sdp"
                 android:textStyle="bold" />
+
             <Button
                 android:id="@+id/btnStartAgain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_125sdp"
-                android:layout_centerHorizontal="true"
-                android:text="@string/btnDone"/>
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/speechBubbleMain"
+                android:layout_marginEnd="129dp"
+                android:text="@string/btnDone" />
+
+            <Button
+                android:id="@+id/btnReopen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@id/btnStartAgain"
+                android:layout_marginEnd="@dimen/_30sdp"
+                android:layout_alignBottom="@id/btnStartAgain"
+                android:text="@string/btnRetry"/>
         </RelativeLayout>
 
     </RelativeLayout>
