--- a/interface/mailbot/app/src/main/res/layout/delivery_activity_openlocker.xml
+++ b/interface/mailbot/app/src/main/res/layout/delivery_activity_openlocker.xml
@@ -50,6 +50,7 @@
                 android:src="@mipmap/speechbubble" />
 
             <TextView
+                android:id="@+id/openLockerDel"
                 android:layout_width="@dimen/_190sdp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
